Backend da aplicação

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,700&display=swap"
         rel="stylesheet">
+    <script src="/script.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <h1>Mousse de Chocolate</h2>
                 <h4>Sobremesa, Doces</h4>
                 <h2>Ingrecientes</h2>
-                <ul>
+                <ul id="ingredients">
                     <li>1 lata de NESTLÉ Creme de Leite</li>
                     <li>200g de chocolate NESTLÉ CLASSIC Meio amargo picado</li>
                     <li>3 claras</li>
